# padlab

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  analogue.c  draw.c  draw.h  draw_opengl.c  gamecontrollerdb.txt  maths.c  maths.h  stick.c  stick.h  util.h
.github/workflows/: cmake.yml
cmake/: BinHelper.cmake  GL3WHelper.cmake  MetalHelper.cmake
src/: CMakeLists.txt  analogue.c  draw.c  draw.h  draw_common.c  draw_metal.m  draw_opengl.c  draw_opengl_core.c  frag.glsl  geom.glsl  metal_shader_types.h  shader.metal  stick.c  stick.h  util.h
src/gl/: draw_opengl.c
src/glcore/: draw_opengl_core.c  geom.glsl  vert.glsl
src/metal/: draw_metal.m
tools/: bin2h.py
