cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
project(padlab C)
set(TARGET padlab)

option(BUILD_OPENGL_LEGACY "Build legacy OpenGL 1.1 compatibility profile executable" ON)
option(BUILD_METAL "Build executable using Metal for drawing (WIP)" ${APPLE})
option(BUILD_OPENGL "Build OpenGL 3.3 core profile executable (WIP)" OFF)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
set(CMAKE_C_STANDARD 99)
set(GNU_COMPILERS GNU Clang AppleClang)
if (CMAKE_C_COMPILER_ID IN_LIST GNU_COMPILERS)
	set(GNU 1)
elseif (MSVC)
	string(REPLACE "/W3" "/W4" CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
endif()

find_package(SDL3 REQUIRED CONFIG)
if (BUILD_OPENGL OR BUILD_OPENGL_LEGACY)
	if (NOT DEFINED OpenGL_GL_PREFERENCE)
		set(OpenGL_GL_PREFERENCE "GLVND")
	endif()
	find_package(OpenGL REQUIRED)
endif()

add_subdirectory(src)
